fixed navbar for mobile hopefully.... seems the chrome devtools do not perfectly simulate mobile devices as my physical device has a bug that is not showing in testing environments.
So... further polished navbar for mobile.
Planning to change up project display to include demo button and programming language names (as icon is not enough for the general audience). Also need to change the timeline thing.... i had an idea of what to put there but can't think of it now.

So update projects tiles
Progress meter thing
Change timeline... maybe just put a scroller of something else

--- a/reactproject1/src/App.css
+++ b/reactproject1/src/App.css
@@ -163,6 +163,15 @@ body, html, #root {
     font-family: 'Libre Baskerville';
 }
 
+.mask-mobile {
+    -webkit-mask-image: linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);
+    mask-image: linear-gradient(to right, transparent 0%, black 2%, black 98%, transparent 100%);
+}
+
+.mask-desktop {
+    -webkit-mask-image: linear-gradient(to right, transparent 0%, black 9%, black 91%, transparent 100%);
+    mask-image: linear-gradient(to right, transparent 0%, black 9%, black 91%, transparent 100%);
+}
 
 .font-expletus {
     font-family: "Expletus Sans", sans-serif;
@@ -243,7 +252,7 @@ body, html, #root {
 }
 
 .nav_link {
-    @apply opacity-0 text-[24px] md:text-[20px] font-bold hover:bg-[#000000]/20 w-full md:w-auto md:rounded-xl pl-6 pr-12 md:px-6 transition-all py-[12px] md:py-[8px] border-b-[2px] border-[rgb(90,90,90)] md:border-none overflow-hidden hover:-translate-y-[2px];
+    @apply opacity-0 text-[24px] md:text-[20px] font-bold hover:bg-[#000000]/20 w-full md:w-auto md:rounded-xl pl-6 pr-12 md:px-6 transition-all py-[16px] md:py-[8px] overflow-hidden hover:-translate-y-[2px];
     display: inline-block;
     position: relative;
     /*font-family: 'GT Walsheim Pro', sans-serif;*/
